# portfolio

./: .env.example  .gitignore  docker-compose.yaml
personal-gpt-context-engine/: .env.example  main.py  pyproject.toml
personal-gpt-context-engine/background_jobs/: __init__.py  ingestion.py
personal-gpt-context-engine/config/: __init__.py  env.py  qdrant.py  redis.py
personal-gpt-context-engine/job_manager/: __init__.py  job_manager.py
personal-gpt-context-engine/models/: __init__.py  jobs.py
personal-gpt-context-engine/redis_client/: __init__.py  redis.py
personal-gpt-context-engine/resume_parser/: __init__.py  parser.py
personal-gpt-context-engine/services/: __init__.py
personal-gpt-context-engine/services/resume_parser/: parser.py
personal-gpt-context-engine/services/vectorization/: __init__.py  embedding_model.py  embeddings.py
personal-gpt-context-engine/utils/: __init__.py  utils.py
personal-gpt-context-engine/vector_db_manager/: __init__.py  manager.py
portfolio-client-side/: package-lock.json  package.json
portfolio-client-side/src/app/: App.tsx
portfolio-client-side/src/components/AppLayout/: index.tsx
portfolio-client-side/src/components/AppRouter/: index.tsx
portfolio-client-side/src/components/Avatar/: index.tsx
portfolio-client-side/src/components/Button/: index.tsx
portfolio-client-side/src/types/: router.ts
portfolio-client-side/src/utils/: cn.ts  routes.tsx
portfolio-clinet-side/: index.html  package-lock.json  package.json
portfolio-clinet-side/src/types/: router.ts
portfolio-clinet-side/src/utils/: routes.tsx
(+12 files in other folders)
